# seamcarver

./: .gitignore  MANIFEST.in  README.md  benchmarks.md  pyproject.toml  requirements.txt
benchmarks/: benchmark_seam_timing.py  conftest.py
docs/: algorithm-overview.md  architecture.md  benchmarking.md  design-decisions.md  optimization.md
seam_carving/: cli.py  core.py  interfaces.py
seam_carving/methods/: __init__.py  sobel.py
seamcarver/: __init__.py  calculator.py  cli.py  constants.py  core.py  interfaces.py  logger.py  utils.py
seamcarver/benchmarks/: __init__.py
seamcarver/methods/: __init__.py  gradient.py  interface.py  laplacian.py  sobel.py
seamcarver/utils/: utils.py
src/seamcarver/: __init__.py  _image.py  _validation.py  calculator.py  cli.py  constants.py  core.py  logger.py
src/seamcarver/methods/: __init__.py  gradient.py  interface.py  laplacian.py  sobel.py
tests/: conftest.py  test.py  test_calculator.py  test_cli.py  test_gradient.py  test_laplacian.py  test_seamcarver.py  test_sobel.py  test_utils.py
