# This file is used to configure the Python project and its dependencies.

# Build system requirements
[build-system]
requires = ["setuptools>=61"]

# Project metadata
[project]
name = "seamcarver"
version = "0.0.1"
description = "A command-line Python tool for image resizing using seam carving."
authors = [{ name = "Albert Okine", email = "okinealb@grinnell.edu" }]
license = "MIT"
readme = "README.md"
dependencies = [
    "numpy",
    "Pillow",
]
keywords = []

# URLs for the main project repository
[project.urls]
Repository = "https://github.com/okinealb/seamcarver.git"

# Optional scripts to run the command-line interface
[project.scripts]
seamcarver = "seamcarver.cli:main"

# Optional dependencies for development and testing
[project.optional-dependencies]
test = [
    "pytest",
]

# Configuration for setuptools to exclude testing packages
[tool.setuptools.packages.find]
exclude = ["tests*", "test*"]