# This file is used to configure the Python project and its dependencies.

# Build system requirements
[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

# Project metadata
[project]
name = "seamcarver"
version = "0.3.0"
description = "A command-line Python tool for image resizing using seam carving."
authors = [{ name = "Albert Okine", email = "okinealb@grinnell.edu" }]
license = { file = "LICENSE" }
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "Pillow>=8.0.0", 
    "scipy>=1.7.0",
]
keywords = ["seam-carving", "image-processing", "computer-vision", "image-resizing"]
classifiers = [
    # Project classification
    "Development Status :: 4 - Beta",
    # Audience
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    # Environment
    "Environment :: Console",
    # License
    "License :: OSI Approved :: MIT License",
    # OS Compatibility
    "Operating System :: OS Independent",
    # Programming Language
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    # Topics
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Utilities",
]

# URLs for the main project repository
[project.urls]
Homepage = "https://github.com/okinealb/seamcarver"
Repository = "https://github.com/okinealb/seamcarver.git"
Issues = "https://github.com/okinealb/seamcarver/issues"

# Optional scripts to run the command-line interface
[project.scripts]
seamcarver = "seamcarver.cli:main"

# Optional dependencies for development and testing
[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-benchmark>=4.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-benchmark>=4.0.0", 
    "black>=22.0.0",
    "isort>=5.0.0",
]

# Configuration for setuptools to find packages correctly
[tool.setuptools.packages.find]
where = ["."]
include = ["seamcarver*"]
exclude = ["tests*", "test*", "build*", "dist*", "*.egg-info*"]

# Pytest configuration 
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--strict-markers --strict-config --verbose"